<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:weightSum="1"
        tools:context="com.example.android.quizz.MainActivity">

        <ImageView
            android:id="@+id/mainQuizLogo"
            style="@style/image"
            app:srcCompat="@drawable/quiz" />

        <TextView
            android:id="@+id/questionLevel1"
            style="@style/questionText"
            android:text="@string/questionText"
            android:textAlignment="center" />

        <Button
            android:id="@+id/choice1"
            style="@style/button"
            android:text="@string/hello" />

        <Button
            android:id="@+id/choice2"
            style="@style/button"
            android:text="@string/bird" />

        <Button
            android:id="@+id/choice3"
            style="@style/button"
            android:text="@string/door" />

        <Button
            android:id="@+id/choice4"
            style="@style/button"
            android:text="@string/tea" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/scoreLevel1"
                style="@style/scoreNumber"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/score_text_level1"
                style="@style/score"
                android:text="@string/score"
                android:layout_alignParentTop="true" />

            <Button
                android:id="@+id/nextpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/score_text_level1"
                android:layout_alignBottom="@+id/score_text_level1"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/next_level" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>